Update and rename github_pull_request_template_Version3.md to .github/ISSUE_TEMPLATE/PR's.yml

--- a/.github/ISSUE_TEMPLATE/PR's.yml
+++ b/.github/ISSUE_TEMPLATE/PR's.yml
@@ -10,7 +10,7 @@ Closes #<issue-number>
 - [ ] Breaking change
 - [ ] Refactor
 - [ ] Documentation
-- [ ] CI/CD or build
+- [ ] Build
 
 ## Screenshots or UI changes
 If applicable, add before/after screenshots or a short clip.
